<resources>
  <string name="app_name">RecipeList</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <!--  <string name="menu_home">Home</string>-->
  <string name="menu_gallery">Gallery</string>
  <string name="menu_slideshow">Slideshow</string>

  <!-- !!!!! -->

  <string name="menu_home">Главная</string>

  <string name="edit">Редактировать</string>
  <string name="delete">Удалить</string>
  <string name="add">Добавить</string>
  <string name="save">Сохранить</string>
  <string name="cancel">Отмена</string>
  <string name="send">Отправить</string>

  <string name="create_action_menu">Добавить рецепт</string>
  <string name="create_category_menu">Добавить категорию</string>
  <string name="edit_category_list_menu">Редакировать категории</string>
  <string name="receive_data_menu">Получить данные</string>

  <string name="main_text">Hello Main !!!</string>
  <string name="name_text">Название</string>
  <string name="create_item_text">Добавь свой рецепт !!!!! :-)</string>
  <string name="create_item_actions">Рецепт</string>
  <string name="create_item_img">Фото</string>
  <string name="create_item_ingredients">Ингредиенты</string>
  <string name="create_item_main">Основное</string>

  <string name="create_item_enter_action">Введите рецепт</string>
  <string name="create_item_enter_name">Введите название</string>
  <string name="create_item_enter_time">Введите время</string>
  <string name="create_item_enter_url">Введите адрес сайта (если такой есть)</string>

  <string name="create_item_enter_name_category">Введите название категории</string>
  <string name="create_item_enter_ingredient">Введите ингредиент</string>
  <string name="create_item_enter_quantity">Введите количество</string>


  <string name="main_message_empty_filter">Нет рецептов данной категории. :-( Хотите добавить?</string>
  <string name="main_message_add_category">Сначала следует добавить категорию!</string>

  <string name="text_ingredient">Ингредиенты</string>
  <string name="text_action">Рецепт</string>


  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="title_activity_item_page">ItemPageActivity</string>
  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>

  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>