<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/createAction"
            android:title="@string/create_action_menu"
            android:orderInCategory="10"
            app:showAsAction="always"
    />
    <item
            android:id="@+id/createCategory"
            android:title="@string/create_category_menu"
            android:orderInCategory="20"
    />
    <item
            android:id="@+id/editCategoryList"
            android:title="@string/edit_category_list_menu"
            android:orderInCategory="20"
    />
    <item
            android:id="@+id/receiveData"
            android:title="@string/receive_data_menu"
            android:orderInCategory="30"
    />

</menu>