<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout-->
<!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--        xmlns:tools="http://schemas.android.com/tools"-->
<!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        tools:context=".CreateItemActivity">-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->


<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".CreateItemActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
>
  <TextView
          android:id="@+id/textCreate"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/create_item_text"
          android:fontFamily="sans-serif"
          android:textSize="26sp"
          android:background="#ffebee"
          android:textColor="#f44336"
          android:layout_gravity="center_horizontal"
          android:layout_marginBottom="10dp"
  />

  <RelativeLayout
          android:id="@+id/topButtonLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
  >
    <Button
            android:text="@string/create_item_main"
            android:id="@+id/CreateMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
    />
    <Button
            android:text="@string/create_item_ingredients"
            android:id="@+id/CreateIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_toRightOf="@+id/CreateMain"
    />
    <Button
            android:text="@string/create_item_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/CreateActions"
            android:onClick="onClick"
            android:layout_toRightOf="@+id/CreateIngredients"
    />
    <Button
            android:text="@string/create_item_img"
            android:id="@+id/CreateImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_toRightOf="@+id/CreateActions"
    />
  </RelativeLayout>


  <FrameLayout
          android:id="@+id/FrameContainer"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="1"
  >
  </FrameLayout>

  <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
  >
    <Button
            android:id="@+id/buttonCancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancel"
            android:layout_toLeftOf="@+id/buttonSave"
            android:layout_marginRight="10dp"
    />

    <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSave"
            android:onClick="save"
            android:layout_alignParentRight="true"
    />
  </RelativeLayout>



</LinearLayout>