<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CreateItemMainFragment"
        android:orientation="vertical"
>
    <EditText
            android:id="@+id/nameItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_item_enter_name"
            android:layout_marginTop="10dp"
    />

    <Spinner
            android:id="@+id/categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
    />

    <EditText
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_item_enter_time"
            android:layout_marginTop="10dp"
    />

    <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_item_enter_url"
            android:layout_marginTop="10dp"
    />
</LinearLayout>