<?xml version="1.0" encoding="utf-8"?>

<GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateListIngredientsFragment"
        android:columnCount="2"
        android:padding="10dp"
>

  <RelativeLayout
          android:id="@+id/frameButton"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_row="0"
          android:layout_column="0"
          android:layout_columnSpan="2"
  >
    <Button
            android:id="@+id/buttonAddFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_add_24"
            android:text="@string/add"
            android:layout_toLeftOf="@+id/buttonDelete"
    />
    <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_delete_24"
            android:text="@string/delete"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
    />
  </RelativeLayout>

  <EditText
          android:id="@+id/name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:hint="@string/create_item_enter_name"
          android:layout_row="1"
          android:layout_column="0"
          android:layout_gravity="center_horizontal"
  />
  <EditText
          android:id="@+id/quantity"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:hint="@string/create_item_enter_quantity"
          android:layout_row="1"
          android:layout_column="1"
          android:layout_gravity="center_horizontal"
  />

  <ListView
          android:id="@+id/productList"
          android:layout_width="wrap_content"
          android:layout_height="0dp"
          android:orientation="vertical"
          android:layout_row="2"
          android:layout_column="0"
          android:layout_columnSpan="2"
          android:layout_marginTop="10dp"
          android:layout_gravity="fill"
  >
  </ListView>

</GridLayout>